# processintel

./: Contributing.md  LICENSE  README.md  SETUP.md  flake.nix  module.nix  pyproject.toml  requirements.txt
.forgejo/workflows/: black-format-check.yml  unittest.yml
.github/workflows/: build.yml
app/: __main__.py  config.py  streamlit_app.py
app/.streamlit/: config.toml
app/analysis/: detection_model.py
app/components/: footer.py  number_input_slider.py
app/io_operations/: export_operations.py  import_operations.py
app/logs/: splits_imf.py
app/mining_algorithms/: inductive_mining_infrequent.py
app/ui/home_ui/: home_controller.py  (+1 more)
converters/: bpmn_converter.py  dfg_converter.py  petri_net_converter.py
docs/algorithms/: inductive_miner_infrequent.md
graphs/: petri_net.py
graphs/visualization/: petri_net_graph.py
mining_algorithms/: alpha_mining.py  base_mining.py  genetic_mining.py
tests/: requirements_test.txt
tests/analysis/: __init__.py  detection_model_test.py  prediction_model_test.py
tests/converters/: csv_to_xes_conversion_test.py  xes_to_csv_conversion_test.py
tests/io/: import_operations_test.py
tests/io_operations/: export_operations_test.py  import_operations_test.py
tests/mining_algorithms/: inductive_mining_infrequent_test.py
tests/testcsv/: existing_concept_name.csv  im_vs_imf_demo.csv  imf_threshold_comparison_test(NOISE_Sensetive 0.0-0.9).csv
tests/testxes/: multiple_attributes.xes  simple_log.xes  various_types.xes  with_namespace.xes
ui/base_algorithm_ui/: base_algorithm_controller.py  base_algorithm_view.py
(+7 files in other folders)
