[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processintel"
version = "1.0"
description = "ProcessIntel - An Open Source Process Mining Tool"
authors = [
    { name="SWISDATA gGmbH", email="office@swisdata.eu" }
]
license = { file = "LICENSE" } 
dependencies = [
    "numpy",
    "pandas",
    "graphviz",
    "ddcal>=1.2.0",
    "streamlit>=1.51.0",
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
processintel = "app.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = []

[tool.setuptools.package-data]
"app" = ["components/*/frontend/build/**/*"]


[tool.black]
target-version = ["py312"]
